--- a/app/assets/stylesheets/hello.scss
+++ b/app/assets/stylesheets/hello.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the hello controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+/* 共通部分
+------------------------------- */
+
+
+.page-title{
+    font-family: 'Permanent Marker', cursive;
+    position: absolute;
+    top: 40%; right: 30%;
+}
+
+.aaa{
+    position: absolute;
+    top: 50%; right: 25%;
+}
+
+
+
+.sss{
+    position: absolute;
+    top: 70%; right: 22%;
+}
+
+
+.gazou{
+    position: absolute;
+    top: 18%; left: 10%;
+}
