--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.calendar{
+width: 1000px;
+height: 100px;
+}
+
+.kakoi{
+    display: flex;
+}
+
+.edit{
+    text-align: left;
+}
+
+.twwet{
+    text-align: left;
+}
+
+.list-group-item{
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
+.o{
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
