--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,2 +1,12 @@
-<%= link_to "ログイン", tweets_path %>
-<%= link_to "新規登録", new_user_registration_path %>
+<div class="home-content wrapper">
+            <h2 class="page-title">Smoke-free<div class="container">
+  <!-- Content here -->
+</div></h2>
+            <p class="aaa">あなたの禁煙習慣を助けるサイト</p>
+            <div class="sss">
+            <%= link_to "ログイン", tweets_path, class:"btn btn-light"  %>
+　　　　　　 <%= link_to "新規登録", new_user_registration_path, class:"btn btn-light"  %>
+            </div>
+</div><!-- /#home -->
+
+<%= image_tag "w.png", class:"gazou", size: '425x425' %>
