--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -8,7 +8,7 @@
     text-align: center;
   }
   .tweet {
-    border-top: solid #00acee;
+    border-top: solid #fafbfc;
     margin-top: 10px;
     padding-top: 20px;
   }
