--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -6,7 +6,7 @@
     text-align: center;
     background-color: #d3def1;
   }
-  .title {
+  .title１ {
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 50px;
