--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,15 +1,15 @@
-<h2>Sign up</h2>
+
 
 
 
   <div class="container">
     <div class="row">
       <div class="col-md-10">
-        <h2 class="text-center font-weight-bold pt-5">まずはアカウントを作成しよう！</h2>
+        <h2 class="text-center font-weight-bold pt-5">新規登録</h2>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="field">
-          <%= f.label :name %><br />
+          <%= f.label :名前 %><br />
           <%= f.text_field :name, autofocus: true %>
         </div>
           <div class="field pt-3">
@@ -42,7 +42,9 @@
             <%= f.submit "登録する", class: "btn btn-primary" %>
           </div>
         <% end %>
-        <%= render "users/shared/links" %>
+        
       </div>
     </div>
   </div>
+
+  
